fix sidenav overflow

--- a/src/styles/scss/app-visual.scss
+++ b/src/styles/scss/app-visual.scss
@@ -98,6 +98,9 @@ $header: 72px;
 
   // NAV
   &__nav {
+    max-height: calc(100vh - #{$header});
+    overflow-y: scroll;
+    padding-bottom: 24px;
     color: white;
 
     li {
